# lilygo-epd47-rs

./: Cargo.toml
.helix/: languages.toml
examples/: battery.rs  counter.rs  deepsleep.rs  grayscale.rs  hello-world.rs  screen-repair.rs  simple.rs
src/: battery.rs  display.rs  ed047tc1.rs  lib.rs  rmt.rs
