[package]
name = "lilygo-epd47"
description = "Simple driver for the LilyGo T5 4.7 inch E-Ink Display (HW-Version V2.3 / ESP32S3)"
version = "0.5.0"
authors = ["Frido Koch <info@fridokoch.de>"]
edition = "2021"
license = "GPL-3.0"
categories = ["embedded", "no-std"]
readme = "./README.md"
repository = "https://github.com/fridolin-koch/lilygo-epd47-rs"
keywords = ["epd", "lilygo", "esp-hal", "ED047TC1", "embedded-graphics"]

[dependencies]
critical-section = "1.2.0"
esp-hal = { version = "1.0.0", features = ["esp32s3","unstable","psram"] }
embedded-graphics-core = { version = "0.4.0", optional = true }
esp-alloc = "0.9.0"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
log = { version = "0.4.28" }

[dev-dependencies]
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
esp-backtrace = { version = "0.18.1", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
u8g2-fonts = { version = "0.7.2", features = ["embedded_graphics_textstyle"] }
embedded-graphics = "0.8.1"

tinybmp = { version = "0.6.0" }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
default = ["embedded-graphics"]

embedded-graphics = ["embedded-graphics-core"]
